<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/txtHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txtHead"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHead">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:onClick="btnAdd_Clicked"
            android:text="@string/btnAdd"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:onClick="btnDisplay_Clicked"
            android:text="@string/btnDisplay"
            android:textSize="18dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>